--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors Game</title>
     <link rel="stylesheet" href="style.css">
-    <script src="javascript.js"></script>
 </head>
 <body>
+    <h1 class="heading">ROCK PAPER SCISSOR GAME</h1>
+    <div class="bt">
+        <button id="rock">ROCK</button>
+        <button id="paper">PAPER</button>
+        <button id="scissors">SCISSORS</button>
+    </div>
+    <div id="result"></div>
+
     
+    <div id="humanScore">Human Score: 0</div>
+    <div id="computerScore">Computer Score: 0</div>
+
+    <!-- Include the JavaScript at the end of the body to ensure it runs after the HTML content is loaded -->
+    <script src="javascript.js"></script>
 </body>
 </html>
